<resources>
    <string name="app_name">My Cart</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>

    <!--  temp  -->
    <string name="temp_name">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in diam ut nibh commodo bibendum id a lectus. </string>
    <string name="price_unit">₫</string>
    <!--  search  -->
    <string name="search_hint">Search by name...</string>

<!--  cart  -->
    <string name="cart_prod">Product</string>
    <string name="cart_quant">Quantity</string>
    <string name="cart_total_price">Total price</string>
    <string name="cart_empty">Cart is empty! Add somethings to display here..</string>
    <string name="cart_title">My Cart</string>
    <string name="cart_total">Total</string>
    <string name="cart_checkout">Checkout</string>

</resources>